fix: seo optimization

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description"
+          content="OceanNFT offers exclusive ocean-themed NFT collectibles
+          built on blockchain technology. Discover digital art, support creators,
+          and build your Web3 collection.">
 
     <title>OceanNFT</title>
     <link rel="icon"
@@ -99,7 +103,7 @@
             </svg>
         </div>
 
-        <button class="burger" id="burger">
+        <button class="burger" id="burger" aria-label="burger" aria-expanded="false">
             <span></span>
             <span></span>
             <span></span>
@@ -128,7 +132,7 @@
 
         <div class="input">
             <div class="wrapper">
-                <button class="button" >
+                <button class="button" aria-label="explore" aria-expanded="false">
                     <span class="text">Explore</span>
 
                     <svg class="ico">
@@ -137,7 +141,7 @@
                 </button>
             </div>
 
-            <a class="label">Create NFT’s</a>
+            <a class="label" href="#">Create NFT’s</a>
         </div>
 
         <div class="counter">
@@ -239,7 +243,7 @@
                     </div>
 
                     <div class="button-container button-container-preset">
-                        <button class="button button-preset">
+                        <button class="button button-preset" aria-label="place bid" aria-expanded="false">
                             <span class="text">Place Bid</span>
 
                             <svg class="ico">
@@ -278,7 +282,7 @@
         <span class="main">Top NFT’s now</span>
 
         <div class="container">
-            <a class="sub">View all</a>
+            <a class="sub" href="#">View all</a>
 
             <svg class="ico">
                 <use xlink:href="img/svg/sprite.svg#arrow"></use>
@@ -361,7 +365,7 @@
                             </div>
                         </div>
                         <div class="slide__button-container button-container-preset">
-                            <button class="slide__button button-preset">
+                            <button class="slide__button button-preset" aria-label="place bid" aria-expanded="false">
                                 <span class="button-text-preset">Place Bid</span>
 
                                 <svg class="slide__button-ico">
@@ -446,7 +450,7 @@
                             </div>
                         </div>
                         <div class="slide__button-container button-container-preset">
-                            <button class="slide__button button-preset">
+                            <button class="slide__button button-preset" aria-label="place bid" aria-expanded="false">
                                 <span class="button-text-preset">Place Bid</span>
 
                                 <svg class="slide__button-ico">
@@ -531,7 +535,7 @@
                             </div>
                         </div>
                         <div class="slide__button-container button-container-preset">
-                            <button class="slide__button button-preset">
+                            <button class="slide__button button-preset" aria-label="place bid" aria-expanded="false">
                                 <span class="button-text-preset">Place Bid</span>
 
                                 <svg class="slide__button-ico">
@@ -617,7 +621,7 @@
                             </div>
                         </div>
                         <div class="slide__button-container button-container-preset">
-                            <button class="slide__button button-preset">
+                            <button class="slide__button button-preset" aria-label="place bid" aria-expanded="false">
                                 <span class="button-text-preset">Place Bid</span>
 
                                 <svg class="slide__button-ico">
@@ -702,7 +706,7 @@
                             </div>
                         </div>
                         <div class="slide__button-container button-container-preset">
-                            <button class="slide__button button-preset">
+                            <button class="slide__button button-preset" aria-label="place bid" aria-expanded="false">
                                 <span class="button-text-preset">Place Bid</span>
 
                                 <svg class="slide__button-ico">
@@ -787,7 +791,7 @@
                             </div>
                         </div>
                         <div class="slide__button-container button-container-preset">
-                            <button class="slide__button button-preset">
+                            <button class="slide__button button-preset" aria-label="place bid" aria-expanded="false">
                                 <span class="button-text-preset">Place Bid</span>
 
                                 <svg class="slide__button-ico">
@@ -803,7 +807,7 @@
         </div>
     </div>
     <div class="container__button--mobile">
-        <button class="button--mobile">
+        <button class="button--mobile" aria-label="explore" aria-expanded="false">
             <span class="text">Explore</span>
 
             <svg class="ico">
@@ -824,56 +828,80 @@
 
         <div class="container">
             <div class="button-container ">
-                <button class="button button_transparent" data-src="tabs-first">
+                <button class="button button_transparent"
+                        data-src="tabs-first"
+                        aria-label="photography"
+                        aria-expanded="false">
                     <span class="text">Photography</span>
                 </button>
             </div>
 
             <div class="button-container">
-                <button class="button button_transparent" data-src="tabs-second">
+                <button class="button button_transparent"
+                        data-src="tabs-second"
+                        aria-label="sports"
+                        aria-expanded="false">
                     <span class="text">Sports</span>
                 </button>
             </div>
 
             <div class="button-container">
-                <button class="button button_transparent" data-src="tabs-third">
+                <button class="button button_transparent"
+                        data-src="tabs-third"
+                        aria-label="brands"
+                        aria-expanded="false">
                     <span class="text">Brands</span>
                 </button>
             </div>
 
             <div class="button-container">
-                <button class="button button_transparent" data-src="tabs-first">
+                <button class="button button_transparent"
+                        data-src="tabs-first"
+                        aria-label="collectibles"
+                        aria-expanded="false">
                     <span class="text">Collectibles</span>
                 </button>
             </div>
 
             <div class="button-container">
-                <button class="button button_transparent" data-src="tabs-second">
+                <button class="button button_transparent"
+                        data-src="tabs-second"
+                        aria-label="art"
+                        aria-expanded="false">
                     <span class="text">Art</span>
                 </button>
             </div>
 
             <div class="button-container">
-                <button class="button button_transparent" data-src="tabs-third">
+                <button class="button button_transparent"
+                        data-src="tabs-third"
+                        aria-label="utility"
+                        aria-expanded="false">
                     <span class="text">Utility</span>
                 </button>
             </div>
 
             <div class="button-container">
-                <button class="button button_transparent" data-src="tabs-first">
+                <button class="button button_transparent"
+                        data-src="tabs-first"
+                        aria-label="brand"
+                        aria-expanded="false">
                     <span class="text">Brand</span>
                 </button>
             </div>
 
             <div class="button-container">
-                <button class="button button_transparent" data-src="tabs-second">
+                <button class="button button_transparent"
+                        data-src="tabs-second"
+                        aria-label="collectibles"
+                        aria-expanded="false">
                     <span class="text">Collectibles</span>
                 </button>
             </div>
         </div>
 
         <div class="sub-container">
-            <a class="sub">View all</a>
+            <a class="sub" href="#">View all</a>
 
             <svg class="ico">
                 <use xlink:href="img/svg/sprite.svg#arrow"></use>
@@ -900,7 +928,7 @@
         <span class="main">Explore Collections</span>
 
         <div class="container">
-            <a class="sup">View all</a>
+            <a class="sup" href="#">View all</a>
 
             <svg class="ico">
                 <use xlink:href="img/svg/sprite.svg#arrow"></use>
@@ -967,7 +995,9 @@
                     </div>
 
                     <div class="button-container button-container-preset">
-                        <button class="button button-preset">
+                        <button class="button button-preset"
+                                aria-label="follow"
+                                aria-expanded="false">
                             <span class="button-text-preset">Follow</span>
                         </button>
                     </div>
@@ -1032,7 +1062,9 @@
                     </div>
 
                     <div class="button-container button-container-preset">
-                        <button class="button button-preset">
+                        <button class="button button-preset"
+                                aria-label="follow"
+                                aria-expanded="false">
                             <span class="button-text-preset">Follow</span>
                         </button>
                     </div>
@@ -1091,7 +1123,9 @@
                         </div>
                     </div>
                     <div class="button-container button-container-preset">
-                        <button class="button button-preset">
+                        <button class="button button-preset"
+                                aria-label="follow"
+                                aria-expanded="false">
                             <span class="button-text-preset">Follow</span>
                         </button>
                     </div>
@@ -1156,7 +1190,9 @@
                     </div>
 
                     <div class="button-container button-container-preset">
-                        <button class="button button-preset">
+                        <button class="button button-preset"
+                                aria-label="follow"
+                                aria-expanded="false">
                             <span class="button-text-preset">Follow</span>
                         </button>
                     </div>
@@ -1221,7 +1257,9 @@
                     </div>
 
                     <div class="button-container button-container-preset">
-                        <button class="button button-preset">
+                        <button class="button button-preset"
+                                aria-label="utility"
+                                aria-expanded="false">
                             <span class="button-text-preset">Follow</span>
                         </button>
                     </div>
@@ -1280,7 +1318,9 @@
                         </div>
                     </div>
                     <div class="button-container button-container-preset">
-                        <button class="button button-preset">
+                        <button class="button button-preset"
+                                aria-label="follow"
+                                aria-expanded="false">
                             <span class="button-text-preset">Follow</span>
                         </button>
                     </div>
@@ -1290,7 +1330,9 @@
     </div>
 
     <div class="container__button--mobile">
-        <button class="button--mobile">
+        <button class="button--mobile"
+                aria-label="explore"
+                aria-expanded="false">
             <span class="text">Explore</span>
 
             <svg class="ico">
@@ -1314,10 +1356,10 @@
                 </svg>
 
                 <div class="content ">
-                    <a class="item">Day</a>
-                    <a class="item">Week</a>
-                    <a class="item">Month</a>
-                    <a class="item">Year</a>
+                    <a class="item" href="#">Day</a>
+                    <a class="item" href="#">Week</a>
+                    <a class="item" href="#">Month</a>
+                    <a class="item" href="#">Year</a>
                 </div>
             </div>
         </div>
@@ -2781,7 +2823,9 @@
     </div>
 
     <div class="container__button--mobile" data-swiper-id="sellersMobile">
-        <button class="button--mobile">
+        <button class="button--mobile"
+                aria-label="explore"
+                aria-expanded="false">
             <span class="text">Explore</span>
 
             <svg class="ico">
@@ -2791,7 +2835,9 @@
     </div>
 
     <div class="sellers__button-container button-container-preset">
-        <button class="sellers__button button-preset">
+        <button class="sellers__button button-preset"
+                aria-label="explore all"
+                aria-expanded="false">
             <span class="sellers__button-text">Explore all</span>
         </button>
     </div>
@@ -2823,14 +2869,14 @@
             curabitur eu congue dui ut. <br>
             </span>
             <div class="links">
-                <a class="main">Learn more</a>
+                <a class="main" href="#">Learn more</a>
 
                 <div class="sub-container">
                     <svg class="ico">
                         <use xlink:href="img/svg/sprite.svg#play"></use>
                     </svg>
 
-                    <a class="sub">Watch video</a>
+                    <a class="sub" href="#">Watch video</a>
                 </div>
             </div>
         </div>
@@ -2868,7 +2914,9 @@
                    placeholder="Your work email address">
 
             <div class="button-container button-container-preset">
-                <button class="button button-preset">
+                <button class="button button-preset"
+                        aria-label="subscribe"
+                        aria-expanded="false">
                     <span class="button-text button-text-preset">Subscribe</span>
                 </button>
             </div>
@@ -2914,7 +2962,7 @@
         <div class="menu">
             <div class="menu__section">
                 <div class="title-container accordion">
-                    <a class="menu__title">Market place</a>
+                    <a class="menu__title" href="#">Market place</a>
 
                     <svg class="accordion-ico">
                         <use xlink:href="img/svg/sprite.svg#accordion"></use>
@@ -2939,7 +2987,7 @@
 
             <div class="menu__section">
                 <div class="title-container accordion">
-                    <a class="menu__title">Collectibles</a>
+                    <a class="menu__title" href="#">Collectibles</a>
 
                     <svg class="accordion-ico">
                         <use xlink:href="img/svg/sprite.svg#accordion"></use>
@@ -2947,21 +2995,21 @@
                 </div>
 
                 <div class="item-container">
-                    <a class="item">About</a>
+                    <a class="item" href="#">About</a>
 
-                    <a class="item">Press</a>
+                    <a class="item" href="#">Press</a>
 
-                    <a class="item">Careers</a>
+                    <a class="item" href="#">Careers</a>
 
-                    <a class="item">Contact</a>
+                    <a class="item" href="#">Contact</a>
 
-                    <a class="item">Partners</a>
+                    <a class="item" href="#">Partners</a>
                 </div>
             </div>
 
             <div class="menu__section">
                 <div class="title-container accordion">
-                    <a class="menu__title">Support</a>
+                    <a class="menu__title" href="#">Support</a>
 
                     <svg class="accordion-ico">
                         <use xlink:href="img/svg/sprite.svg#accordion"></use>
@@ -2983,7 +3031,7 @@
 
             <div class="menu__section">
                 <div class="title-container accordion">
-                    <a class="menu__title">Legal</a>
+                    <a class="menu__title" href="#">Legal</a>
 
                     <svg class="accordion-ico">
                         <use xlink:href="img/svg/sprite.svg#accordion"></use>
@@ -3005,7 +3053,7 @@
 
             <div class="menu__section">
                 <div class="title-container accordion">
-                    <a class="menu__title">Follow us</a>
+                    <a class="menu__title" href="#">Follow us</a>
 
                     <svg class="accordion-ico">
                         <use xlink:href="img/svg/sprite.svg#accordion"></use>
@@ -3031,11 +3079,11 @@
         <span class="title">© 2020 Landify UI Kit. All rights reserved</span>
 
         <div class="sup-menu">
-            <a class="item">Terms & Conditions</a>
+            <a class="item" href="#">Terms & Conditions</a>
 
-            <a class="item">Privacy Policy</a>
+            <a class="item" href="#">Privacy Policy</a>
 
-            <a class="item">Sitemap</a>
+            <a class="item" href="#">Sitemap</a>
         </div>
     </div>
 </footer>
