fix: minor link style

--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
           and build your Web3 collection.">
 
     <title>OceanNFT</title>
+
     <link rel="icon"
           href="img/svg/logo.svg"
           type="image/x-icon">
 
     <link rel="stylesheet"
-          href="css/normalize.css">
-
-    <link rel="stylesheet"
           href="libs/swiper/swiper-bundle.min.css"
           media="print"
           onload="this.media='all'">
+
+    <link rel="stylesheet"
+          href="css/normalize.css">
 
     <link rel="stylesheet"
           href="css/style.css">
@@ -2098,7 +2099,7 @@
     </div>
 
 
-    <div class="swiper--mobile">
+    <div class="swiper swiper--mobile"  data-swiper-id="sellersMobile">
         <div class="swiper-wrapper ">
             <div class="swiper-slide slide__sellers">
                 <span class="sellers__id">1</span>
@@ -2822,7 +2823,7 @@
         </div>
     </div>
 
-    <div class="container__button--mobile" data-swiper-id="sellersMobile">
+    <div class="container__button--mobile">
         <button class="button--mobile"
                 aria-label="explore"
                 aria-expanded="false">
