fix: optimization test

--- a/index.html
+++ b/index.html
@@ -14,33 +14,15 @@
           href="img/svg/logo.svg"
           type="image/x-icon">
 
-
+    <link rel="stylesheet"
+          href="libs/swiper/swiper-bundle.min.css">
 
     <link rel="stylesheet"
-          href="libs/swiper/swiper-bundle.min.css"
-          media="print"
-          onload="this.media='all'">
+          href="css/normalize.css">
 
     <link rel="stylesheet"
-          href="css/normalize.css"
-          media="print"
-          onload="this.media='all'">
+          href="css/style.css">
 
-    <link rel="stylesheet"
-          href="css/style.css"
-          media="print"
-          onload="this.media='all'">
-
-    <noscript>
-        <link rel="stylesheet"
-              href="css/normalize.css">
-
-        <link rel="stylesheet"
-              href="css/style.css">
-
-        <link rel="stylesheet"
-              href="libs/swiper/swiper-bundle.min.css">
-    </noscript>
 </head>
 <body>
 
@@ -3107,7 +3089,7 @@
     </div>
 </footer>
 
-<script src="libs/swiper/swiper-bundle.min.js"></script>
+<script defer src="libs/swiper/swiper-bundle.min.js"></script>
 <script src="js/form.js"></script>
 
 </body>
