fix: minor adaptive

--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
                         <button class="button button-preset"
                                 aria-label="follow"
                                 aria-expanded="false">
-                            <span class="button-text-preset">Follow</span>
+                            <span class="button-text button-text-preset">Follow</span>
                         </button>
                     </div>
                 </div>
@@ -1066,7 +1066,7 @@
                         <button class="button button-preset"
                                 aria-label="follow"
                                 aria-expanded="false">
-                            <span class="button-text-preset">Follow</span>
+                            <span class="button-text button-text-preset">Follow</span>
                         </button>
                     </div>
                 </div>
@@ -1127,7 +1127,7 @@
                         <button class="button button-preset"
                                 aria-label="follow"
                                 aria-expanded="false">
-                            <span class="button-text-preset">Follow</span>
+                            <span class="button-text button-text-preset">Follow</span>
                         </button>
                     </div>
                 </div>
@@ -1194,7 +1194,7 @@
                         <button class="button button-preset"
                                 aria-label="follow"
                                 aria-expanded="false">
-                            <span class="button-text-preset">Follow</span>
+                            <span class="button-text button-text-preset">Follow</span>
                         </button>
                     </div>
                 </div>
@@ -1322,7 +1322,7 @@
                         <button class="button button-preset"
                                 aria-label="follow"
                                 aria-expanded="false">
-                            <span class="button-text-preset">Follow</span>
+                            <span class="button-text button-text-preset">Follow</span>
                         </button>
                     </div>
                 </div>
