--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <svg class="bg__glow">
             <use xlink:href="img/svg/sprite.svg#bg__glow-first"></use>
         </svg>
+
     </div>
 </div>
 
@@ -3090,7 +3091,7 @@
 </footer>
 
 <script defer src="libs/swiper/swiper-bundle.min.js"></script>
-<script src="js/form.js"></script>
+<script src="js/script.js"></script>
 
 </body>
 
