--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
-          content="OceanNFT offers exclusive ocean-themed NFT collectibles
-          built on blockchain technology. Discover digital art, support creators,
-          and build your Web3 collection.">
+          content="OceanNFT offers exclusive ocean-themed NFT collectibles built on blockchain technology. Discover digital art, support creators, and build your Web3 collection.">
 
     <title>OceanNFT</title>
 
@@ -2989,7 +2987,7 @@
 
             <div class="menu__section">
                 <div class="title-container accordion">
-                    <a class="menu__title" href="#">Collectibles</a>
+                    <span class="menu__title">Collectibles</span>
 
                     <svg class="accordion-ico">
                         <use xlink:href="img/svg/sprite.svg#accordion"></use>
@@ -3011,7 +3009,7 @@
 
             <div class="menu__section">
                 <div class="title-container accordion">
-                    <a class="menu__title" href="#">Support</a>
+                    <span class="menu__title">Support</span>
 
                     <svg class="accordion-ico">
                         <use xlink:href="img/svg/sprite.svg#accordion"></use>
@@ -3033,7 +3031,7 @@
 
             <div class="menu__section">
                 <div class="title-container accordion">
-                    <a class="menu__title" href="#">Legal</a>
+                    <span class="menu__title">Legal</span>
 
                     <svg class="accordion-ico">
                         <use xlink:href="img/svg/sprite.svg#accordion"></use>
@@ -3055,7 +3053,7 @@
 
             <div class="menu__section">
                 <div class="title-container accordion">
-                    <a class="menu__title" href="#">Follow us</a>
+                    <span class="menu__title">Follow us</span>
 
                     <svg class="accordion-ico">
                         <use xlink:href="img/svg/sprite.svg#accordion"></use>
