--- a/index.html
+++ b/index.html
@@ -2962,7 +2962,7 @@
         <div class="menu">
             <div class="menu__section">
                 <div class="title-container accordion">
-                    <a class="menu__title" href="#">Market place</a>
+                    <span class="menu__title">Market place</span>
 
                     <svg class="accordion-ico">
                         <use xlink:href="img/svg/sprite.svg#accordion"></use>
