fix: header and discover

--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
 
         <div class="container">
             <div class="button-container ">
-                <button class="button button_transparent"
+                <button class="button button_transparent clicked"
                         data-src="tabs-first"
                         aria-label="photography"
                         aria-expanded="false">
